# grapic-python-clone

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
src/grapic/: __init__.py  main_class.py  main_functions.py
tests/: __init__.py  example1_rectangle.py  example2_spring-mass.py
