[metadata]
name = grapic
description = A remake of Alexandre Meyer's C++ Grapic library in pure Python.
long_description = file: README.md
long_description_content_type = text/markdown
author = megat69
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
url = https://github.com/megat69/grapic-python-clone

[options]
packages =
    grapic
python_requires = >=3.6
package_dir =
    = src