[metadata]
name = grapic
description = A remake of Alexandre Meyer's C++ Grapic library in pure Python.
long_description = file: README.md
long_description_content_type = text/markdown
author = megat69
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
url = https://github.com/megat69/grapic-python-clone

[options]
packages =
    grapic
python_requires = >=3.6
package_dir =
    = src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
grapic = py.typed

[flake8]
max-line-length = 160